--- a/css/custom.css
+++ b/css/custom.css
@@ -90,6 +90,7 @@ body {
     /* Default State (Will be overridden by GSAP) */
     color: var(--icon-dim);
     filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1));
+    margin-right: 0px;
 }
 
 .switch-handle {
