--- a/css/custom.css
+++ b/css/custom.css
@@ -112,3 +112,8 @@ body {
         inset 0 2px 3px rgba(255, 255, 255, 0.9),
         inset 0 -2px 5px rgba(0, 0, 0, 0.05);
 }
+
+.blur-frame{
+    background-image: linear-gradient(#ffffffe6, #fff0);
+    mask-image: linear-gradient(#000 25%, #0000 100%);
+}
