--- a/css/character.css
+++ b/css/character.css
@@ -74,12 +74,12 @@ body.cursor-hidden {
     transform-origin: bottom left;
     pointer-events: none;
     text-align: center;
-    color: var(--color--tk-black);
+    color: var(--text-color);
     text-shadow: 0 2px 4px rgba(0,0,0,0.3);
     padding: 12px 18px;
     border-radius: 18px;
     border-bottom-left-radius: 2px;
-    background: var(--color--tk-light-white);;
+    background: var(--bg-color);;
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     border: 1px solid rgba(255, 255, 255, 0.3);
