--- a/css/custom.css
+++ b/css/custom.css
@@ -25,8 +25,7 @@ body *::after {
 h1, h2, h3, h4, h5, h6,
 p, span, div, li, a, 
 input, textarea, button, select {
-  color: inherit;
-  color:var(--text-primary);
+  color: var(--text-primary) !important;;
 }
 
 .fade-border {
